--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 	<version>1.0</version>
 	<packaging>war</packaging>
 	
+	
+	
 	<distributionManagement>
 		<snapshotRepository>
 		<id>snapshots</id>
@@ -30,6 +32,7 @@
 	</dependencies>
 
 	<build>
+	    <finalName>sparkjava</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -64,4 +67,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
